garotm - fix issues in settings/index.html.

--- a/src/api/templates/settings/index.html
+++ b/src/api/templates/settings/index.html
@@ -131,7 +131,7 @@
 document.addEventListener('alpine:init', () => {
     Alpine.data('settingsManager', () => ({
         activeTab: 'general',
-        settings: {{ settings|tojson|safe }},
+        settings: JSON.parse('{{ settings|tojson|safe }}'),
         
         async saveGeneralSettings() {
             try {
